feat: halaman utama

--- a/src/content/docs/leetcode-sql-50/00.mdx
+++ b/src/content/docs/leetcode-sql-50/00.mdx
@@ -7,6 +7,11 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 Seri **LeetCode SQL 50** adalah kumpulan pembahasan soal-soal SQL dari LeetCode yang dirancang khusus untuk membantu kamu belajar PostgreSQL dari dasar hingga menengah. Setiap soal dilengkapi dengan penjelasan step-by-step yang mudah dipahami.
 
+## Ekspektasi Setelah Belajar
+
+- Kamu bisa membuat query SQL yang kompleks dan efisien
+- Kamu bisa lolos sertifikat SQL Advanced di HackerRank (berdasar pengalaman penulis)
+
 ## Format Pembelajaran
 
 Setiap soal dalam seri ini memiliki format:
