feat: materi join lebih detail dan terpisah

--- a/src/content/docs/leetcode-sql-50/06.mdx
+++ b/src/content/docs/leetcode-sql-50/06.mdx
@@ -171,156 +171,8 @@ Dari contoh data:
 
 Hasil akhirnya sesuai output contoh, dengan Alice dan Bob punya `unique_id = NULL`.
 
-## Penjelasan JOIN
-
-Ada 4 jenis JOIN yang bisa kita gunakan untuk menggabungkan data dari dua tabel. Mari kita lihat perbedaannya dengan contoh menggunakan tabel `Employees` dan `EmployeeUNI`.
-
-Tapi sebelumnya, kita perlu memahami konsep **tabel kiri** dan **tabel kanan** dalam JOIN.
-
-### Tabel Kiri vs Tabel Kanan
-
-Dalam JOIN, yang menentukan tabel kiri dan kanan adalah **posisi di query**, bukan urutan di `SELECT`:
-
-- **Tabel kiri**: Tabel yang ada di `FROM` (atau setelah `FROM`)
-- **Tabel kanan**: Tabel yang ada setelah `JOIN` (atau `LEFT JOIN`, `RIGHT JOIN`, dll)
-
-Contoh dari query kita:
-
-```sql
-SELECT eu.unique_id, e.name
-FROM Employees e              -- ← Ini TABEL KIRI
-LEFT JOIN EmployeeUNI eu      -- ← Ini TABEL KANAN
-    ON eu.id = e.id;
-```
-
-Meskipun di `SELECT` kita tulis `eu.unique_id` dulu, yang menentukan tabel kiri/kanan adalah:
-
-- `FROM Employees e` → **Tabel kiri** (`Employees`)
-- `LEFT JOIN EmployeeUNI eu` → **Tabel kanan** (`EmployeeUNI`)
-
-Jadi `LEFT JOIN` berarti "ambil semua dari tabel kiri (`Employees`) + yang cocok di tabel kanan (`EmployeeUNI`)".
-
-Kalau kita balik urutannya:
-
-```sql
-SELECT e.name, eu.unique_id
-FROM EmployeeUNI eu          -- ← Sekarang ini TABEL KIRI
-LEFT JOIN Employees e        -- ← Sekarang ini TABEL KANAN
-    ON e.id = eu.id;
-```
-
-Sekarang `EmployeeUNI` jadi tabel kiri, dan `Employees` jadi tabel kanan. Hasilnya akan berbeda!
-
-### 1. INNER JOIN
-
-INNER JOIN hanya mengambil baris yang ada di **kedua tabel** (yang cocok berdasarkan kondisi join).
-
-```sql
-SELECT eu.unique_id, e.name
-FROM Employees e
-INNER JOIN EmployeeUNI eu ON eu.id = e.id;
-```
-
-**Hasil:**
-
-```
-+-----------+----------+
-| unique_id | name     |
-+-----------+----------+
-| 2         | Meir     |
-| 3         | Winston  |
-| 1         | Jonathan |
-+-----------+----------+
-```
-
-Hanya 3 baris yang muncul karena hanya Meir, Winston, dan Jonathan yang ada di kedua tabel. Alice dan Bob tidak muncul karena tidak ada di `EmployeeUNI`.
-
-### 2. LEFT JOIN (LEFT OUTER JOIN)
-
-LEFT JOIN mengambil **semua baris dari tabel kiri** (`Employees`), dan mencocokkannya dengan tabel kanan. Jika tidak ada yang cocok, kolom dari tabel kanan akan berisi `NULL`.
-
-```sql
-SELECT eu.unique_id, e.name
-FROM Employees e
-LEFT JOIN EmployeeUNI eu ON eu.id = e.id;
-```
-
-**Hasil:**
-
-```
-+-----------+----------+
-| unique_id | name     |
-+-----------+----------+
-| null      | Alice    |
-| null      | Bob      |
-| 2         | Meir     |
-| 3         | Winston  |
-| 1         | Jonathan |
-+-----------+----------+
-```
-
-Semua employee muncul, termasuk Alice dan Bob yang tidak punya `unique_id` (ditampilkan sebagai `NULL`). Ini adalah solusi untuk soal ini.
-
-### 3. RIGHT JOIN (RIGHT OUTER JOIN)
-
-RIGHT JOIN mengambil **semua baris dari tabel kanan** (`EmployeeUNI`), dan mencocokkannya dengan tabel kiri. Jika tidak ada yang cocok, kolom dari tabel kiri akan berisi `NULL`.
-
-```sql
-SELECT eu.unique_id, e.name
-FROM Employees e
-RIGHT JOIN EmployeeUNI eu ON eu.id = e.id;
-```
-
-**Hasil:**
-
-```
-+-----------+----------+
-| unique_id | name     |
-+-----------+----------+
-| 2         | Meir     |
-| 3         | Winston  |
-| 1         | Jonathan |
-+-----------+----------+
-```
-
-Hasilnya sama dengan INNER JOIN karena semua `id` di `EmployeeUNI` ada di `Employees`. Tapi kalau ada `id` di `EmployeeUNI` yang tidak ada di `Employees`, baris tersebut akan muncul dengan `name = NULL`.
-
-### 4. FULL OUTER JOIN
-
-FULL OUTER JOIN mengambil **semua baris dari kedua tabel**. Jika tidak ada yang cocok di salah satu tabel, kolom dari tabel tersebut akan berisi `NULL`.
-
-```sql
-SELECT eu.unique_id, e.name
-FROM Employees e
-FULL OUTER JOIN EmployeeUNI eu ON eu.id = e.id;
-```
-
-**Hasil:**
-
-```
-+-----------+----------+
-| unique_id | name     |
-+-----------+----------+
-| null      | Alice    |
-| null      | Bob      |
-| 2         | Meir     |
-| 3         | Winston  |
-| 1         | Jonathan |
-+-----------+----------+
-```
-
-Hasilnya sama dengan LEFT JOIN dalam kasus ini, karena semua `id` di `EmployeeUNI` ada di `Employees`. Tapi kalau ada `id` di `EmployeeUNI` yang tidak ada di `Employees`, baris tersebut juga akan muncul dengan `name = NULL`.
-
-### Ringkasan Perbedaan
-
-| JOIN Type           | Baris yang Diambil                          |
-| ------------------- | ------------------------------------------- |
-| **INNER JOIN**      | Hanya yang cocok di kedua tabel             |
-| **LEFT JOIN**       | Semua dari tabel kiri + yang cocok di kanan |
-| **RIGHT JOIN**      | Semua dari tabel kanan + yang cocok di kiri |
-| **FULL OUTER JOIN** | Semua dari kedua tabel                      |
-
-Untuk soal ini, kita pakai **LEFT JOIN** karena kita ingin menampilkan semua employee (dari tabel kiri), meskipun tidak semua punya `unique_id`.
+> Kalau kamu masih bingung dengan `JOIN` dan kenapa menggunakan `LEFT JOIN`, coba baca dulu materi ini yaa!
+> [Memahami 4 Jenis JOIN](../../basic/01-join)
 
 ## Referensi
 
@@ -330,3 +182,4 @@ Untuk soal ini, kita pakai **LEFT JOIN** karena kita ingin menampilkan semua emp
 - `ON`: Menentukan kondisi untuk menggabungkan baris dari kedua tabel.
 - `AS` / Alias: Memberi nama singkat untuk tabel (contoh: `e` untuk `Employees`, `eu` untuk `EmployeeUNI`).
 - `NULL`: Nilai yang menunjukkan tidak ada data.
+- [Memahami 4 Jenis JOIN](../../basic/01-join)
