--- a/src/content/docs/basic/01-join.mdx
+++ b/src/content/docs/basic/01-join.mdx
@@ -4,12 +4,18 @@ description: Penjelasan lengkap tentang 4 jenis JOIN dengan contoh praktis
 ---
 
 import Lightbox from "../../../components/Lightbox.astro";
+import joinData from "../../../assets/join-data.png";
+import joinAll from "../../../assets/join-all.png";
+import joinFull from "../../../assets/join-full.png";
+import joinLeft from "../../../assets/join-left.png";
+import joinRight from "../../../assets/join-right.png";
+import joinInner from "../../../assets/join-inner.png";
 
 JOIN adalah cara untuk menggabungkan data dari dua atau lebih tabel berdasarkan kondisi tertentu. Di materi ini, kita akan belajar 4 jenis JOIN dengan contoh yang mudah dipahami.
 
 ## TL;DR
 
-<Lightbox src="/join-all.png" />
+<Lightbox src={joinAll.src} alt="Overview 4 jenis JOIN" />
 
 ## Setup Data
 
@@ -42,7 +48,7 @@ INSERT INTO books (book_id, title, author_id) VALUES
 
 Data yang kita punya:
 
-<Lightbox src="/join-data.png" />
+<Lightbox src={joinData.src} alt="Data authors dan books" />
 
 Perhatikan:
 
@@ -80,7 +86,7 @@ FULL JOIN books ON authors.author_id = books.author_id
 ORDER BY authors.author_id ASC;
 ```
 
-<Lightbox src="/join-full.png" />
+<Lightbox src={joinFull.src} alt="FULL JOIN" />
 
 Perhatikan:
 
@@ -104,7 +110,7 @@ LEFT JOIN books ON authors.author_id = books.author_id
 ORDER BY authors.author_id ASC;
 ```
 
-<Lightbox src="/join-left.png" />
+<Lightbox src={joinLeft.src} alt="LEFT JOIN" />
 
 Perhatikan:
 
@@ -129,7 +135,7 @@ RIGHT JOIN books ON authors.author_id = books.author_id
 ORDER BY authors.author_id ASC;
 ```
 
-<Lightbox src="/join-right.png" />
+<Lightbox src={joinRight.src} alt="RIGHT JOIN" />
 
 Perhatikan:
 
@@ -154,7 +160,7 @@ INNER JOIN books ON authors.author_id = books.author_id
 ORDER BY authors.author_id ASC;
 ```
 
-<Lightbox src="/join-inner.png" />
+<Lightbox src={joinInner.src} alt="INNER JOIN" />
 
 Kenapa hanya 3 baris?
 
