--- a/src/content/docs/basic/02-number-types.mdx
+++ b/src/content/docs/basic/02-number-types.mdx
@@ -10,8 +10,8 @@ PostgreSQL menyediakan berbagai tipe data untuk menyimpan angka. Memilih tipe da
 PostgreSQL punya beberapa tipe data angka:
 
 - **Integer**: `SMALLINT`, `INTEGER` (atau `INT`), `BIGINT` - untuk bilangan bulat
-- **Decimal**: `NUMERIC` (atau `DECIMAL`) - untuk angka dengan presisi tinggi
 - **Floating Point**: `REAL`, `DOUBLE PRECISION` - untuk angka desimal dengan presisi lebih rendah
+- **Floating Point (Presisi Tinggi)**: `NUMERIC` (atau `DECIMAL`) - untuk angka dengan presisi tinggi
 - **Serial**: `SERIAL`, `SMALLSERIAL`, `BIGSERIAL` - untuk auto-increment
 
 ## Tipe Data Integer (Bilangan Bulat)
