feat: soal 12 dan restructure basic knowledge

--- a/src/content/docs/leetcode-sql-50/06.mdx
+++ b/src/content/docs/leetcode-sql-50/06.mdx
@@ -172,7 +172,7 @@ Dari contoh data:
 Hasil akhirnya sesuai output contoh, dengan Alice dan Bob punya `unique_id = NULL`.
 
 > Kalau kamu masih bingung dengan `JOIN` dan kenapa menggunakan `LEFT JOIN`, coba baca dulu materi ini yaa!
-> [Memahami 4 Jenis JOIN](../../basic/01-join)
+> [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
 
 ## Referensi
 
@@ -182,4 +182,4 @@ Hasil akhirnya sesuai output contoh, dengan Alice dan Bob punya `unique_id = NUL
 - `ON`: Menentukan kondisi untuk menggabungkan baris dari kedua tabel.
 - `AS` / Alias: Memberi nama singkat untuk tabel (contoh: `e` untuk `Employees`, `eu` untuk `EmployeeUNI`).
 - `NULL`: Nilai yang menunjukkan tidak ada data.
-- [Memahami 4 Jenis JOIN](../../basic/01-join)
+- [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
