--- a/src/content/docs/leetcode-sql-50/07.mdx
+++ b/src/content/docs/leetcode-sql-50/07.mdx
@@ -172,7 +172,7 @@ Dari contoh data:
 Hasil akhirnya sesuai output contoh.
 
 > Kalau kamu masih bingung dengan `JOIN` dan kenapa menggunakan `LEFT JOIN`, coba baca dulu materi ini yaa!
-> [Memahami 4 Jenis JOIN](../../basic/01-join)
+> [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
 
 ## Referensi
 
@@ -182,4 +182,4 @@ Hasil akhirnya sesuai output contoh.
 - `ON`: Menentukan kondisi untuk menggabungkan baris dari kedua tabel.
 - `AS` / Alias: Memberi nama singkat untuk tabel (contoh: `s` untuk `Sales`, `p` untuk `Product`).
 - Foreign Key: Kolom yang merujuk ke primary key di tabel lain, memastikan integritas data.
-- [Memahami 4 Jenis JOIN](../../basic/01-join)
+- [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
