--- a/src/content/docs/leetcode-sql-50/08.mdx
+++ b/src/content/docs/leetcode-sql-50/08.mdx
@@ -184,7 +184,7 @@ Setelah `GROUP BY customer_id`:
 Hasil akhir sesuai dengan output contoh.
 
 > Kalau kamu masih bingung dengan `JOIN` dan kenapa menggunakan `LEFT JOIN`, coba baca dulu materi ini yaa!
-> [Memahami 4 Jenis JOIN](../../basic/01-join)
+> [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
 
 ## Referensi
 
@@ -197,4 +197,4 @@ Hasil akhir sesuai dengan output contoh.
 - `GROUP BY`: Mengelompokkan baris berdasarkan nilai kolom tertentu.
 - `COUNT(*)`: Menghitung jumlah baris dalam setiap grup.
 - `AS`: Memberi alias untuk kolom hasil query.
-- [Memahami 4 Jenis JOIN](../../basic/01-join)
+- [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
