--- a/src/content/docs/leetcode-sql-50/10.mdx
+++ b/src/content/docs/leetcode-sql-50/10.mdx
@@ -196,7 +196,7 @@ Dari contoh data:
 Hasil akhir sesuai dengan output contoh.
 
 > Kalau kamu masih bingung dengan `JOIN` dan kenapa menggunakan `INNER JOIN`, coba baca dulu materi ini yaa!
-> [Memahami 4 Jenis JOIN](../../basic/01-join)
+> [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
 
 ## Referensi
 
@@ -212,5 +212,5 @@ Hasil akhir sesuai dengan output contoh.
 - `GROUP BY`: Mengelompokkan baris berdasarkan nilai kolom tertentu.
 - `AS`: Memberi alias untuk kolom hasil query.
 - Operasi aritmatika pada kolom: Bisa melakukan pengurangan, penjumlahan, dll pada kolom numerik.
-- [Memahami 4 Jenis JOIN](../../basic/01-join)
+- [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
 - [Casting Tipe Data](../../basic/06-casting-types)
