--- a/src/content/docs/leetcode-sql-50/11.mdx
+++ b/src/content/docs/leetcode-sql-50/11.mdx
@@ -182,7 +182,7 @@ Mari kita breakdown query-nya step by step:
 Hasil akhir: Brad (NULL), John (NULL), dan Dan (500), sesuai dengan output contoh.
 
 > Kalau kamu masih bingung dengan `JOIN` dan kenapa menggunakan `LEFT JOIN`, coba baca dulu materi ini yaa!
-> [Memahami 4 Jenis JOIN](../../basic/01-join)
+> [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
 
 ## Referensi
 
@@ -195,4 +195,4 @@ Hasil akhir: Brad (NULL), John (NULL), dan Dan (500), sesuai dengan output conto
 - `IS NULL`: Mengecek apakah nilai kolom adalah `NULL`.
 - Operasi perbandingan: `<` untuk membandingkan nilai numerik.
 - Foreign Key: Kolom yang merujuk ke primary key di tabel lain, memastikan integritas data.
-- [Memahami 4 Jenis JOIN](../../basic/01-join)
+- [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
