--- a/src/content/docs/leetcode-sql-50/09.mdx
+++ b/src/content/docs/leetcode-sql-50/09.mdx
@@ -140,7 +140,7 @@ Dari contoh data:
 Hasil akhir: `id = 2` dan `id = 4`.
 
 > Kalau kamu masih bingung dengan `JOIN` dan kenapa menggunakan `LEFT JOIN`, coba baca dulu materi ini yaa!
-> [Memahami 4 Jenis JOIN](../../basic/01-join)
+> [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
 
 ## Referensi
 
@@ -153,4 +153,4 @@ Hasil akhir: `id = 2` dan `id = 4`.
 - `WHERE`: Memfilter baris berdasarkan kondisi tertentu.
 - Operasi aritmatika pada kolom: Bisa melakukan pengurangan, penjumlahan, dll pada kolom numerik.
 - `AS` / Alias: Memberi nama singkat untuk tabel (contoh: `w1` dan `w2` untuk `Weather`).
-- [Memahami 4 Jenis JOIN](../../basic/01-join)
+- [Memahami 4 Jenis JOIN](../../basic/02-01-4-joins)
