fix: restructure basic knowledge

--- a/src/content/docs/basic/01-01-number-types.mdx
+++ b/src/content/docs/basic/01-01-number-types.mdx
@@ -196,7 +196,7 @@ INSERT INTO ecommerce_orders (user_id, item_count, total_price, discount_percent
     (3, 100, 5000000.75, 15.25);
 ```
 
-> Untuk mempelajari cara mengubah tipe data menggunakan casting, baca materi: [Casting Tipe Data](../../basic/06-casting-types)
+> Untuk mempelajari cara mengubah tipe data menggunakan casting, baca materi: [Casting Tipe Data](../../basic/01-05-casting-types)
 
 ## Referensi
 
@@ -209,4 +209,4 @@ INSERT INTO ecommerce_orders (user_id, item_count, total_price, discount_percent
 - `SERIAL`: Auto-increment INTEGER
 - `SMALLSERIAL`: Auto-increment SMALLINT
 - `BIGSERIAL`: Auto-increment BIGINT
-- [Casting Tipe Data](../../basic/06-casting-types)
+- [Casting Tipe Data](../../basic/01-05-casting-types)
