--- a/src/content/docs/basic/01-05-casting-types.mdx
+++ b/src/content/docs/basic/01-05-casting-types.mdx
@@ -178,4 +178,4 @@ SELECT 'Rp ' || price::NUMERIC(10, 2)::VARCHAR AS formatted_price FROM products;
 - Casting String: `'123'::INT`, `123::VARCHAR`
 - Casting Numeric: `100::NUMERIC(10, 2)`, `99.99::INT`
 - Casting Integer: `100::SMALLINT::INT`, `1000::INT::BIGINT`
-- [Tipe Data Angka](../../basic/02-number-types)
+- [Tipe Data Angka](../../basic/01-01-number-types)
