fix: ganti kategori Subqueries

--- a/src/content/docs/leetcode-sql-50/37.mdx
+++ b/src/content/docs/leetcode-sql-50/37.mdx
@@ -6,7 +6,7 @@ description: Employees Whose Manager Left the Company
 import { Badge } from "@astrojs/starlight/components";
 
 <Badge text="Easy" variant="note" />
-<Badge text="Subquery" variant="note" />
+<Badge text="Subqueries" variant="note" />
 
 Temukan employee dengan gaji < $30000 yang managernya sudah tidak ada di company menggunakan `NOT IN` dengan subquery.
 
