--- a/src/content/docs/leetcode-sql-50/38.mdx
+++ b/src/content/docs/leetcode-sql-50/38.mdx
@@ -6,7 +6,7 @@ description: Exchange Seats
 import { Badge } from "@astrojs/starlight/components";
 
 <Badge text="Medium" variant="note" />
-<Badge text="Subquery" variant="note" />
+<Badge text="Subqueries" variant="note" />
 
 Tukar seat id setiap 2 student berturut-turut menggunakan window function `LEAD()` dan `LAG()` dengan `CASE WHEN`.
 
