--- a/src/content/docs/leetcode-sql-50/39.mdx
+++ b/src/content/docs/leetcode-sql-50/39.mdx
@@ -6,7 +6,7 @@ description: Movie Rating
 import { Badge } from "@astrojs/starlight/components";
 
 <Badge text="Medium" variant="note" />
-<Badge text="Subquery" variant="note" />
+<Badge text="Subqueries" variant="note" />
 
 Temukan user dengan review terbanyak dan movie dengan rating tertinggi di bulan tertentu menggunakan 2 CTE dengan `UNION ALL`.
 
