--- a/src/content/docs/leetcode-sql-50/40.mdx
+++ b/src/content/docs/leetcode-sql-50/40.mdx
@@ -6,7 +6,7 @@ description: Restaurant Growth
 import { Badge } from "@astrojs/starlight/components";
 
 <Badge text="Medium" variant="note" />
-<Badge text="Window Functions" variant="note" />
+<Badge text="Subqueries" variant="note" />
 
 Hitung total dan rata-rata amount untuk setiap hari berdasarkan 7 hari terakhir (termasuk hari itu sendiri) menggunakan CTE, window function `SUM() OVER()`, `AVG() OVER()`, dan `OFFSET`.
 
