--- a/src/content/docs/leetcode-sql-50/41.mdx
+++ b/src/content/docs/leetcode-sql-50/41.mdx
@@ -6,7 +6,7 @@ description: Friend Requests II - Who Has the Most Friends
 import { Badge } from "@astrojs/starlight/components";
 
 <Badge text="Medium" variant="note" />
-<Badge text="Advanced Select and Joins" variant="note" />
+<Badge text="Subqueries" variant="note" />
 
 Cari orang yang punya teman paling banyak dengan menghitung jumlah friend request yang dikirim dan diterima menggunakan multiple CTE, `FULL JOIN`, `COALESCE()`, dan `ORDER BY` dengan `LIMIT`.
 
