--- a/src/content/docs/leetcode-sql-50/42.mdx
+++ b/src/content/docs/leetcode-sql-50/42.mdx
@@ -6,7 +6,7 @@ description: Investments in 2016
 import { Badge } from "@astrojs/starlight/components";
 
 <Badge text="Medium" variant="note" />
-<Badge text="Window Functions" variant="note" />
+<Badge text="Subqueries" variant="note" />
 
 Hitung total investasi 2016 untuk policyholder yang punya `tiv_2015` sama dengan orang lain tapi lokasi unik menggunakan window function `COUNT() OVER(PARTITION BY)` dan filtering.
 
