--- a/src/content/docs/leetcode-sql-50/43.mdx
+++ b/src/content/docs/leetcode-sql-50/43.mdx
@@ -6,7 +6,7 @@ description: Department Top Three Salaries
 import { Badge } from "@astrojs/starlight/components";
 
 <Badge text="Hard" variant="caution" />
-<Badge text="Window Functions" variant="note" />
+<Badge text="Subqueries" variant="note" />
 
 Cari karyawan dengan salary top 3 unik di setiap department menggunakan multiple CTE, `DISTINCT`, window function `SUM() OVER()` untuk ranking, dan `JOIN`.
 
