--- a/src/content/docs/leetcode-sql-50/47.mdx
+++ b/src/content/docs/leetcode-sql-50/47.mdx
@@ -6,7 +6,7 @@ description: Second Highest Salary
 import { Badge } from "@astrojs/starlight/components";
 
 <Badge text="Medium" variant="note" />
-<Badge text="Subqueries" variant="note" />
+<Badge text="Advanced String Functions / Regex / Clause" variant="note" />
 
 Cari salary tertinggi kedua yang unik menggunakan subquery, `DISTINCT`, `ORDER BY`, `OFFSET`, dan `LIMIT`.
 
